Fri May 29 17:39:14 2015  Koichi Sasada  <ko1@atdot.net>

	* tool/make_hgraph.rb: added.

Fri May 29 14:39:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): out of range NTH_REF is always
	  nil.

	* parse.y (parse_numvar): check overflow of NTH_REF and range.
	  [ruby-core:69393] [Bug #11192]

	* util.c (ruby_scan_digits): make public and add length parameter.

Fri May 29 11:18:58 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal,
	  bsock_recvmsg_internal):
	  avoid redundant fcntl on Linux
	  [ruby-core:69154] [Feature #11145]
	* ext/socket/init.c (rsock_s_recvfrom_nonblock): ditto
	* ext/socket/rubysocket.h (MSG_DONTWAIT_RELIABLE): new macro

Fri May 29 10:30:34 2015  Eric Wong  <e@80x24.org>

	* lib/net/resolv.rb (request): use monotonic clock
	* lib/net/http.rb (begin_transport, end_transport): ditto
	  [ruby-core:69384] [Feature #11124]

Fri May 29 04:37:38 2015  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c: add two methods to debug internals.

	  * ObjectSpace.internal_class_of: return RBASIC_CLASS(obj).
	  * ObjectSpace.internal_super_of: return RCLASS_SUPER(cls).

	* NEWS: add information about both methods.

	* test/objspace/test_objspace.rb: add tests for both methods.

Thu May 28 06:55:53 2015  Anton Davydov  <antondavydov.o@gmail.com>

	* ext/tk/sample/figmemo_sample.rb (open_file),
	  ext/tk/sample/tktextio.rb (TkTextIO): fix typo in messages.
	  [Fix GH-916]

Wed May 27 09:50:51 2015  Eric Wong  <e@80x24.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_traverse, ossl_asn1_decode,
	  ossl_asn1_decode_all): use RB_GC_GUARD instead of volatile
	  [ruby-core:69371] [Bug #11185]

Wed May 27 09:27:30 2015  Eric Wong  <e@80x24.org>

	* lib/drb/drb.rb (set_sockopt): remove redundant fcntl call
	* lib/drb/unix.rb (set_sockopt): ditto
	  [ruby-core:69128] [Feature #11137]

Tue May 26 22:10:43 2015  Shugo Maeda  <shugo@ruby-lang.org>
